# Decepticon

./: .env.example  CHANGELOG.md  Makefile  README.md  README_KO.md  docker-compose.dev.yml  docker-compose.integrated.yml  docker-compose.quickstart.yml  docker-compose.watch.yml  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml  release-recover.yml  release.yml
benchmark/: README-mhbench.md  config.py  harness.py  runner.py  schemas.py
benchmark/providers/: mhbench.py  xbow.py
benchmark/results/: README.md
benchmark/results/XBEN-001-24/evidence/: summary.json  summary.md
benchmark/results/XBEN-002-24/: report.md
benchmark/results/XBEN-002-24/20260507_041742/: report.json
benchmark/results/XBEN-002-24/evidence/: summary.json
benchmark/results/XBEN-003-24/20260507_041742/: report.md
benchmark/results/XBEN-004-24/20260507_041742/: report.md
benchmark/results/XBEN-004-24/evidence/: summary.json  summary.md
benchmark/results/XBEN-007-24/: report.json
benchmark/results/XBEN-011-24/: report.md
benchmark/results/XBEN-011-24/20260507_041742/: report.json
benchmark/results/XBEN-011-24/evidence/: summary.json
benchmark/results/XBEN-012-24/: report.json  report.md
benchmark/results/XBEN-012-24/20260507_041742/: report.json  report.md
benchmark/results/XBEN-014-24/: report.json
benchmark/results/XBEN-014-24/evidence/: summary.md
benchmark/results/XBEN-015-24/: report.json  report.md
benchmark/results/XBEN-022-24/evidence/: summary.json  summary.md
benchmark/results/XBEN-023-24/: report.json
benchmark/results/XBEN-023-24/evidence/: summary.md
benchmark/results/XBEN-027-24/: report.json  report.md
benchmark/results/XBEN-029-24/: report.md
benchmark/results/XBEN-029-24/evidence/: summary.json
benchmark/results/XBEN-030-24/: report.json  report.md
benchmark/results/XBEN-033-24/evidence/: summary.md
benchmark/results/XBEN-034-24/20260506_125718/: report.md
benchmark/results/XBEN-034-24/20260506_142232/: report.json  report.md
benchmark/results/XBEN-034-24/20260513_183510/: report.md
benchmark/results/XBEN-034-24/20260513_201114/: report.json
benchmark/results/XBEN-034-24/20260514_113833/: report.json
benchmark/results/XBEN-034-24/evidence/: summary.md
benchmark/results/XBEN-037-24/20260506_125718/: report.json
benchmark/results/XBEN-037-24/evidence/: summary.json
benchmark/results/XBEN-040-24/: report.json
benchmark/results/XBEN-040-24/evidence/: summary.md
benchmark/results/XBEN-043-24/: report.json  report.md
benchmark/results/XBEN-046-24/evidence/: summary.json  summary.md
benchmark/results/XBEN-048-24/: report.json  report.md
benchmark/results/XBEN-049-24/: report.md
benchmark/results/XBEN-049-24/evidence/: summary.json
benchmark/results/XBEN-050-24/: report.md
benchmark/results/XBEN-050-24/evidence/: summary.json
benchmark/results/XBEN-051-24/evidence/: summary.json  summary.md
benchmark/results/XBEN-054-24/evidence/: summary.json
benchmark/results/XBEN-055-24/: report.md
benchmark/results/XBEN-055-24/evidence/: summary.json
benchmark/results/XBEN-060-24/evidence/: summary.json  (+1 more)
benchmark/results/XBEN-063-24/: report.md
benchmark/results/XBEN-067-24/: report.json
benchmark/results/XBEN-068-24/: report.md
benchmark/results/XBEN-069-24/: report.json
benchmark/results/XBEN-071-24/: report.json  report.md
benchmark/results/XBEN-074-24/: report.json
benchmark/results/XBEN-075-24/: report.json
benchmark/results/XBEN-078-24/: report.md
benchmark/results/XBEN-080-24/: report.md
benchmark/results/XBEN-081-24/: report.json
benchmark/results/XBEN-082-24/: report.json
benchmark/results/XBEN-085-24/: report.md
benchmark/results/XBEN-091-24/: report.json
benchmark/results/XBEN-095-24/: report.json
benchmark/results/XBEN-100-24/: report.md
benchmark/results/XBEN-104-24/: report.json
clients/launcher/: .goreleaser.yml
clients/launcher/cmd/: onboard.go  onboard_chatgpt_auth_test.go  start.go
config/: litellm.yaml  litellm_dynamic_config.py  oauth_token_store.py
containers/: bitnet.Dockerfile  bitnet_service.py  langgraph.Dockerfile  sandbox-entrypoint.sh  sandbox.Dockerfile  web.Dockerfile
decepticon/agents/: _benchmark_mode.py  ad_operator.py  cloud_hunter.py  contract_auditor.py  decepticon.py  exploit.py  postexploit.py  recon.py  reverser.py  soundwave.py  vulnresearch.py
decepticon/agents/prompts/: decepticon.md  exploit.md  postexploit.md  recon.md
decepticon/agents/standard/: exploit.py  postexploit.py
decepticon/api/: deception_routes.py
decepticon/backends/: __init__.py  cube_sandbox.py  docker_sandbox.py  factory.py  http_sandbox.py
decepticon/core/: config.py
decepticon/deception/: engine.py
decepticon/llm/: factory.py
decepticon/middleware/: opplan.py  skills.py
decepticon/sandbox_kernel/: __init__.py  base.py  daemon.py  jobs.py  tmux.py
decepticon/sandbox_server/: __init__.py  __main__.py  app.py
decepticon/services/: cube_sandbox_manager.py
decepticon/skills/benchmark/: SKILL.md
decepticon/tools/: opplan.py  skills.py
decepticon/tools/bash/: bash.py
decepticon/tools/interaction/: ask_user.py
docs/: architecture.md  benchmark-comparison.md  cli-reference.md  contributing.md  library-usage.md  makefile-reference.md  pypi-distribution-strategy.md  setup-guide.md
docs/superpowers/plans/: 2026-05-22-pypi-distribution.md
docs/superpowers/specs/: 2026-05-22-pypi-distribution-strategy-design.md
scripts/: deploy-full.sh  vps-setup.sh
skills/benchmark/: SKILL.md
skills/exploit/web/: SKILL.md  blind-sqli.md  deserialization.md  idor.md  lfi.md  smuggling.md  ssti.md
skills/shared/: workflow.md
skills/standard/soundwave/: workflow.md
tests/unit/: test_plugin_loader.py  test_wheel_contents.py
tests/unit/backends/: test_background_jobs.py  test_docker_sandbox_helpers.py  test_session_log.py  test_skills_path.py
tests/unit/llm/: test_factory.py
tests/unit/middleware/: test_opplan_persistence.py
tests/unit/research/: test_no_neo4j_at_import.py
tests/unit/tools/: test_complete_planning.py
(+186 files in other folders)
