[project]
name = "decepticon"
# Sentinel — replaced with the git tag at Docker build time via ARG VERSION
# in containers/langgraph.Dockerfile. Source-tree value is intentionally
# stable (not bumped per release) so contributors never need a manual
# version commit before tagging.
version = "0.0.0"
description = "AI-powered autonomous red team testing framework"
readme = "README.md"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
requires-python = ">=3.13"

authors = [
    { name = "Decepticon Team" }
]

keywords = [
    "ai", "security", "red-team", "penetration-testing",
    "llm", "langchain", "langgraph", "autonomous-agents"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    # LLM
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.2.0",
    "langgraph-sdk>=0.1.0",
    # HTTP
    "httpx>=0.27.0",
    "deepagents>=0.5.0",
    # Sandbox HTTP daemon — the FastAPI app that ships inside the
    # sandbox container and that `HTTPSandbox` (decepticon/backends/
    # http_sandbox.py) talks to. Carried in the main install set
    # because the sandbox container mounts decepticon as
    # /deps/decepticon and runs `python -m decepticon.sandbox_server`
    # as its entrypoint; the agent process imports nothing from these
    # at runtime.
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    # CLI
    "typer[all]>=0.9.0",
    "xxhash>=3.0.0",
    # Security
    "defusedxml>=0.7.0",
]

[project.optional-dependencies]
# Heavy / feature-specific deps kept out of the base install so
# `pip install decepticon` stays lean for library consumers. The neo4j
# driver is imported lazily (decepticon/tools/research/neo4j_store.py), so
# the base install imports and runs everything except the KG graph tools.
neo4j = ["neo4j>=5.0"]
all = ["decepticon[neo4j]"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.4.0",
    "basedpyright>=1.37.0",
]

[project.scripts]
decepticon-kg-health = "decepticon.tools.research.health:main"

# Plugin entry-point groups consumed by ``decepticon.plugin_loader``.
# External packages (SaaS or community plugins) declare their
# contributions under these groups. See ``decepticon/plugin_loader.py``
# for the loader contract (shapes, factory kwargs, error isolation).
#
#   [project.entry-points."decepticon.tools"]
#   my-tools = "my_pkg.tools:get_tools"
#
#   [project.entry-points."decepticon.middleware"]
#   my-mw = "my_pkg.middleware:get_middleware"
#
#   [project.entry-points."decepticon.agents"]
#   my-agent = "my_pkg.agents.my_agent"
#
#   [project.entry-points."decepticon.subagents"]
#   my-subagent = "my_pkg.agents.my_subagent:SUBAGENT_SPEC"
#
#   [project.entry-points."decepticon.callbacks"]
#   my-cb = "my_pkg.callbacks:get_callbacks"

# OSS-shipped subagents — registered here so the plugin loader picks
# them up uniformly with external plugins. Each entry resolves to a
# ``SubAgentSpec`` module constant declaring (name, description,
# factory, parent_agents, bundle, priority). The main agents iterate
# ``load_subagents_for_parent(<their-name>)`` at construction time;
# adding a new subagent — OSS or plugin — is a pure entry-point
# registration with no main-agent edits required.
#
# Bundle activation — controlled by a 4-tier hierarchy (highest wins):
#   1. DECEPTICON_PLUGINS env var (e.g. "standard,plugins,saas" or "*")
#   2. .decepticon.toml: [plugins] enabled = [...]
#   3. pyproject.toml: [tool.decepticon.plugins] enabled = [...]
#   4. Default: ["standard"]
# Default keeps OSS lean. The ``plugins`` bundle (vulnresearch family)
# is opt-in. See decepticon/plugin_loader.py for the loader contract.

# Default Decepticon project config — kept in OSS so this checkout's
# native dev workflow (e.g. ``make benchmark``, ``langgraph dev``)
# automatically activates both bundles instead of forcing every
# developer to remember the env var. End-user OSS installs that DON'T
# clone this repo see the hardcoded ``["standard"]`` default; SaaS
# images override via ``ENV DECEPTICON_PLUGINS=standard,saas``.

[tool.decepticon.plugins]
enabled = ["standard", "plugins"]

[project.entry-points."decepticon.subagents"]
# Standard bundle — attached to the ``decepticon`` main agent.
recon = "decepticon.agents.standard.recon:SUBAGENT_SPEC"
exploit = "decepticon.agents.standard.exploit:SUBAGENT_SPEC"
analyst = "decepticon.agents.standard.analyst:SUBAGENT_SPEC"
reverser = "decepticon.agents.standard.reverser:SUBAGENT_SPEC"
contract_auditor = "decepticon.agents.standard.contract_auditor:SUBAGENT_SPEC"
cloud_hunter = "decepticon.agents.standard.cloud_hunter:SUBAGENT_SPEC"
ad_operator = "decepticon.agents.standard.ad_operator:SUBAGENT_SPEC"
postexploit = "decepticon.agents.standard.postexploit:SUBAGENT_SPEC"
# Plugins bundle — vulnresearch family, attached to the ``vulnresearch`` main agent.
scanner = "decepticon.agents.plugins.scanner:SUBAGENT_SPEC"
detector = "decepticon.agents.plugins.detector:SUBAGENT_SPEC"
verifier = "decepticon.agents.plugins.verifier:SUBAGENT_SPEC"
patcher = "decepticon.agents.plugins.patcher:SUBAGENT_SPEC"
exploiter = "decepticon.agents.plugins.exploiter:SUBAGENT_SPEC"

[project.urls]
Homepage = "https://github.com/PurpleAILAB/Decepticon"
Repository = "https://github.com/PurpleAILAB/Decepticon"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["decepticon"]
# Skill markdown trees (standard/shared/plugins) ship as package data and are
# included by default since they are VCS-tracked. Benchmark skills are
# XBOW/CTF eval-harness conventions — kept in-repo for `make benchmark` but
# excluded from the published wheel.
exclude = ["decepticon/skills/benchmark/**"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "benchmark/xbow-validation-benchmarks",
    "benchmark/MHBench",
    "benchmark/results",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "asyncio: mark test as async (pytest-asyncio)",
    "slow: integration-style tests that hit wall-clock timeouts or otherwise take seconds; deselected from the PR fast lane",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["decepticon"]
branch = true
omit = [
    "decepticon/__main__.py",
    "decepticon/auth/providers/*",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

[tool.basedpyright]
pythonVersion = "3.13"
include = ["decepticon", "tests", "benchmark"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "reference",
    "decepticon/auth/providers",
    "benchmark/xbow-validation-benchmarks",
    "benchmark/MHBench",
    "benchmark/results",
]
# Use pyright "standard" semantics rather than the basedpyright "all" default —
# the existing codebase predates basedpyright's stricter rules. As code is
# annotated over time, individual reports can be ratcheted back to "error".
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
# Unknown types — common with langchain/langgraph dynamic interfaces
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"
# basedpyright extras that fire on idiomatic Python
reportAny = "none"
reportExplicitAny = "none"
reportImplicitOverride = "none"
reportUnusedCallResult = "none"
reportUnannotatedClassAttribute = "none"
reportUninitializedInstanceVariable = "none"
reportImplicitStringConcatenation = "none"
reportPrivateUsage = "none"
reportImportCycles = "none"
reportPropertyTypeMismatch = "none"
reportIgnoreCommentWithoutRule = "none"
# Demote pre-existing issues to warnings (still surfaced, but non-blocking).
# Real attribute-access bugs in newly-written code should still be caught:
# add a # pyright: ignore[reportAttributeAccessIssue] comment at the call site
# instead of escalating this back to "error" wholesale.
reportAttributeAccessIssue = "warning"
reportOperatorIssue = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportAssignmentType = "warning"
reportReturnType = "warning"
reportGeneralTypeIssues = "warning"
