[project]
name = "decepticon-workspace"
# Workspace umbrella — never published. Per-package versions are stamped
# from the git tag at Docker build time. This root carries only the
# shared tooling config (ruff/basedpyright/pytest/coverage) so the dev
# workflow runs uniformly across the three published packages under
# ``packages/``.
version = "0.0.0"
description = "Decepticon monorepo workspace (core / framework / sdk split)"
requires-python = ">=3.13"
dependencies = [
    "decepticon",
    "decepticon-core",
    "decepticon-sdk",
]

[tool.uv]
# Virtual root — no wheel built from the workspace umbrella. Real
# packages live under ``packages/*`` and are built per their own
# ``[tool.hatch.build.targets.wheel]`` configs.
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
decepticon = { workspace = true }
decepticon-core = { workspace = true }
decepticon-sdk = { workspace = true }

# Project-level plugin activation, read by ``decepticon.plugin_loader``
# from the CWD's pyproject.toml. Kept at the workspace root so the
# in-checkout dev workflow (``make dev``, ``langgraph dev``,
# ``make benchmark``) automatically activates both OSS bundles
# without forcing every contributor to remember the env var.
# OSS end-user installs that don't clone this repo fall back to the
# hardcoded ``["standard"]`` default; SaaS Docker images override via
# ``ENV DECEPTICON_PLUGINS=standard,saas``.

[tool.decepticon.plugins]
enabled = ["standard", "plugins"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.4.0",
    "basedpyright>=1.37.0",
]

# ─────────────────────────────────────────────────────────────────────
# Shared tooling — workspace-wide. Per-package overrides intentionally
# absent: the three packages share a single Ruff + basedpyright +
# pytest contract so contributors don't have to remember per-package
# variations.
# ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "benchmark/xbow-validation-benchmarks",
    "benchmark/MHBench",
    "benchmark/results",
]

[tool.ruff.lint]
# TID251 = flake8-tidy-imports banned-api. Enables the
# decepticon-core langchain-free guarantee at lint time
# (complements the runtime test_no_runtime_deps subprocess check).
select = ["E", "F", "I", "W", "TID251"]
ignore = ["E501"]

[tool.ruff.lint.isort]
# Mark all three workspace packages as first-party so isort groups
# them together instead of treating ``decepticon_core`` /
# ``decepticon_sdk`` as third-party.
known-first-party = ["decepticon", "decepticon_core", "decepticon_sdk"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Spec §11.4: ``decepticon-core`` must never import these. The
# per-file-ignores section below scopes the rule to the core layer
# only — the framework + SDK packages legitimately use them.
"langchain".msg = "decepticon-core must stay langchain-free (spec §11.4)"
"langchain_core".msg = "decepticon-core must stay langchain-free (spec §11.4)"
"langchain_anthropic".msg = "decepticon-core must stay langchain-free (spec §11.4)"
"langchain_openai".msg = "decepticon-core must stay langchain-free (spec §11.4)"
"langgraph".msg = "decepticon-core must stay langchain-free (spec §11.4)"
"deepagents".msg = "decepticon-core must stay langchain-free (spec §11.4)"
"httpx".msg = "decepticon-core must stay langchain-free (spec §11.4)"
"fastapi".msg = "decepticon-core must stay langchain-free (spec §11.4)"
"uvicorn".msg = "decepticon-core must stay langchain-free (spec §11.4)"

[tool.ruff.lint.per-file-ignores]
# Scope banned-api to decepticon-core: the framework, SDK, LiteLLM
# config handlers, benchmark harness, and clients legitimately depend
# on langchain / langgraph / deepagents / httpx / fastapi.
"packages/decepticon/**" = ["TID251"]
"packages/decepticon-sdk/**" = ["TID251"]
"benchmark/**" = ["TID251"]
"clients/**" = ["TID251"]
"scripts/**" = ["TID251"]
"config/**" = ["TID251"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "packages/decepticon-core/tests",
    "packages/decepticon/tests",
    "packages/decepticon-sdk/tests",
]
markers = [
    "asyncio: mark test as async (pytest-asyncio)",
    "slow: integration-style tests that hit wall-clock timeouts or otherwise take seconds; deselected from the PR fast lane",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["packages/decepticon/src/decepticon"]
branch = true
omit = [
    "packages/decepticon/src/decepticon/__main__.py",
    "packages/decepticon/src/decepticon/auth/providers/*",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

[tool.basedpyright]
pythonVersion = "3.13"
include = [
    "packages/decepticon-core/src",
    "packages/decepticon-core/tests",
    "packages/decepticon/src",
    "packages/decepticon/tests",
    "packages/decepticon-sdk/src",
    "packages/decepticon-sdk/tests",
    "benchmark",
]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "reference",
    "packages/decepticon/src/decepticon/auth/providers",
    "benchmark/xbow-validation-benchmarks",
    "benchmark/MHBench",
    "benchmark/results",
]
# Use pyright "standard" semantics rather than the basedpyright "all" default —
# the existing codebase predates basedpyright's stricter rules. As code is
# annotated over time, individual reports can be ratcheted back to "error".
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
# Unknown types — common with langchain/langgraph dynamic interfaces
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"
# basedpyright extras that fire on idiomatic Python
reportAny = "none"
reportExplicitAny = "none"
reportImplicitOverride = "none"
reportUnusedCallResult = "none"
reportUnannotatedClassAttribute = "none"
reportUninitializedInstanceVariable = "none"
reportImplicitStringConcatenation = "none"
reportPrivateUsage = "none"
reportImportCycles = "none"
reportPropertyTypeMismatch = "none"
reportIgnoreCommentWithoutRule = "none"
# Demote pre-existing issues to warnings (still surfaced, but non-blocking).
# Real attribute-access bugs in newly-written code should still be caught:
# add a # pyright: ignore[reportAttributeAccessIssue] comment at the call site
# instead of escalating this back to "error" wholesale.
reportAttributeAccessIssue = "warning"
reportOperatorIssue = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportAssignmentType = "warning"
reportReturnType = "warning"
reportGeneralTypeIssues = "warning"
# Phase 5 added ``py.typed`` markers to all three packages, which
# flips pyright into strict re-export checking — re-exported imports
# without an explicit ``__all__`` count as private. The existing
# framework codebase predates this convention; demote to warning so
# the migration list surfaces over time without blocking new work.
reportPrivateImportUsage = "warning"
